datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  ADMIN
  USER
}

model User {
  id        Int            @id @default(autoincrement())
  createdAt DateTime       @default(now())
  updatedAt DateTime       @updatedAt
  username  String         @unique
  password  String
  stars     Int            @default(0)
  role      Role
  topics    UsersTopics[]
  answers   Answer[]
  rewards   UsersRewards[]
}

model Topic {
  id          Int           @id @default(autoincrement())
  name        String        @unique
  questions   Question[]
  UsersTopics UsersTopics[]
}

model UsersTopics {
  user    User  @relation(fields: [userId], references: [id])
  userId  Int
  topic   Topic @relation(fields: [topicId], references: [id])
  topicId Int

  @@id([userId, topicId])
}

model File {
  id          Int        @id @default(autoincrement())
  url         String
  name        String?
  mimetype    String?
  bucket      String?
  metadataUrl String?
  Question    Question[]
}

model Question {
  id            Int      @id @default(autoincrement())
  question      String
  correctAnswer String
  starsAmount   Int      @default(0)
  topic         Topic    @relation(fields: [topicId], references: [id])
  topicId       Int
  Answer        Answer[]
  doc           File     @relation(fields: [docId], references: [id])
  docId         Int
}

model Answer {
  user       User     @relation(fields: [userId], references: [id])
  userId     Int
  question   Question @relation(fields: [questionId], references: [id])
  questionId Int
  answer     String
  isCorrect  Boolean  @default(false)

  @@id([userId, questionId])
}

model Reward {
  id           Int            @id @default(autoincrement())
  name         String
  starsCost    Int            @default(0)
  UsersRewards UsersRewards[]
}

model UsersRewards {
  user      User     @relation(fields: [userId], references: [id])
  userId    Int
  reward    Reward   @relation(fields: [rewardId], references: [id])
  rewardId  Int
  createdAt DateTime @default(now())

  @@id([userId, rewardId])
}
