//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  username String [unique, not null]
  password String [not null]
  stars Int [not null, default: 0]
  role Role [not null]
  topics UsersTopics [not null]
  answers Answer [not null]
  rewards UsersRewards [not null]
}

Table Topic {
  id Int [pk, increment]
  name String [unique, not null]
  questions Question [not null]
  UsersTopics UsersTopics [not null]
}

Table UsersTopics {
  user User [not null]
  userId Int [not null]
  topic Topic [not null]
  topicId Int [not null]

  indexes {
    (userId, topicId) [pk]
  }
}

Table File {
  id Int [pk, increment]
  url String [not null]
  name String
  mimetype String
  bucket String
  metadataUrl String
  Question Question [not null]
}

Table Question {
  id Int [pk, increment]
  question String [not null]
  correctAnswer String [not null]
  starsAmount Int [not null, default: 0]
  topic Topic [not null]
  topicId Int [not null]
  Answer Answer [not null]
  doc File [not null]
  docId Int [not null]
}

Table Answer {
  user User [not null]
  userId Int [not null]
  question Question [not null]
  questionId Int [not null]
  answer String [not null]
  isCorrect Boolean [not null, default: false]

  indexes {
    (userId, questionId) [pk]
  }
}

Table Reward {
  id Int [pk, increment]
  name String [not null]
  starsCost Int [not null, default: 0]
  UsersRewards UsersRewards [not null]
}

Table UsersRewards {
  user User [not null]
  userId Int [not null]
  reward Reward [not null]
  rewardId Int [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (userId, rewardId) [pk]
  }
}

Enum Role {
  ADMIN
  USER
}

Ref: UsersTopics.userId > User.id

Ref: UsersTopics.topicId > Topic.id

Ref: Question.topicId > Topic.id

Ref: Question.docId > File.id

Ref: Answer.userId > User.id

Ref: Answer.questionId > Question.id

Ref: UsersRewards.userId > User.id

Ref: UsersRewards.rewardId > Reward.id